CommandReceiver:subcommand alias